--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "env": {
-        "node": true,
         "browser": true,
+        "node": true,
         "es2021": true
     },
     "extends": [
@@ -18,7 +18,6 @@
         "react"
     ],
     "rules": {
-        "react/prop-types": "off",
-        "react/require-default-props": 0
+        "react/react-in-jsx-scope": "off"
     }
 }
