--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
@@ -27,7 +29,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
